# flux

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: producer.example.toml
dashboard/: Cargo.toml
dashboard/src/: app.rs  config.rs  fmt.rs  lib.rs  main.rs  ui.rs  ws_client.rs
dashboard/src/ui/: health_panel.rs  help.rs  layout.rs  metrics_table.rs  status_bar.rs
docs/: config.md
producer/: Cargo.toml
producer/src/: config.rs  emitter.rs  lib.rs  main.rs  sim.rs
producer/tests/: sim.rs
proto/: Cargo.toml
proto/src/: consts.rs  error.rs  lib.rs  packet.rs  snapshot.rs
proto/tests/: roundtrip.rs  snapshot_json.rs
scripts/: demo.sh
server/: Cargo.toml
server/src/: aggregator.rs  broadcast.rs  clock.rs  config.rs  health.rs  ingest.rs  lib.rs  main.rs  metric_store.rs  ws.rs
server/tests/: aggregation.rs  pipeline_smoke.rs
spec/: packet.md
