[workspace]
resolver = "2"
members = ["proto", "producer", "server", "dashboard"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iqwei/flux"
authors = ["Flux contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
flux-proto = { path = "proto" }
tokio = "1.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
rand = "0.8"
axum = { version = "0.7", features = ["ws"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.23"
ratatui = "0.28"
crossterm = "0.28"
proptest = "1.5"
futures-util = { version = "0.3", default-features = false }
