[package]
name = "flux-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Flux terminal dashboard."

[lints]
workspace = true

[dependencies]
flux-proto = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokio-tungstenite = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
