[package]
name = "flux-producer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Flux UDP telemetry producer."

[lints]
workspace = true

[dependencies]
flux-proto = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync"] }
tokio-util = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
