[package]
name = "flux-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Flux aggregation and WebSocket broadcast server."

[lints]
workspace = true

[dependencies]
flux-proto = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "macros", "signal", "sync"] }
axum = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
